# sobel_canny_omp_cuda

./: CMakeLists.txt  main.cpp
Canny/: Canny.cpp  Canny.h  cudaCanny.cu  cudaCanny.h  ompCanny.cpp  ompCanny.h
Sobel/: Sobel.cpp  Sobel.h  cudaSobel.cu  cudaSobel.h  ompSobel.cpp  ompSobel.h
